use spe to refine structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,12 @@ authors = ["Wenping Guo <ybyygu@gmail.com>"]
 approx = "*"
 cgmath = "*"
 timeit = "*"
+petgraph = "*"
 itertools = "*"
 rand = ">=0.5.0-pre.0"
 octree = { git = "https://github.com/ybyygu/rust-octree.git" }
-# gchemol = { git = "https://github.com/ybyygu/gchemol.git" }
 gchemol = { path = "/home/ybyygu/Workspace/Programming/gchemol" }
+spe = { path = "/home/ybyygu/Workspace/Programming/spe" }
 nalgebra = "*"
 ncollide = "*"
 # ffc75e20-e24a-42b9-8bc6-0ae6be1c3b1f ends here
