--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ authors = ["Wenping Guo <ybyygu@gmail.com>"]
 approx = "*"
 cgmath = "*"
 timeit = "*"
+quicli = "*"
 petgraph = "*"
 itertools = "*"
 rand = ">=0.5.0-pre.0"
