fix dividing by zero error

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,9 @@ timeit = "*"
 quicli = "0.4"
 genevo = "0.2"
 itertools = "*"
-gosh = {git = "https://github.com/gosh-rs/gosh.git", tag="v0.0.20"}
-spdkit = { git = "https://github.com/spdkit/spdkit.git" }
+gosh = {git = "https://github.com/gosh-rs/gosh.git", tag="v0.0.21"}
+#spdkit = { git = "https://github.com/spdkit/spdkit.git" }
+spdkit = { path = "../spdkit" }
 structopt = "0.2"
 serde = "*"
 serde_derive = "*"
