--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,19 +3,20 @@
 # [[file:~/Workspace/Programming/structure-predication/kickstart/kickstart.note::*cargo.toml][cargo.toml:1]]
 [package]
 name = "kickstart"
-version = "0.0.5"
+version = "0.0.6"
 edition = "2018"
 authors = ["Wenping Guo <ybyygu@gmail.com>"]
 
 [dependencies]
 rand = "0.6"
 quicli = "0.4"
-genevo = "0.4"
-#gosh = {git = "https://github.com/gosh-rs/gosh.git", tag="v0.0.21"}
 gosh = {path = "/home/ybyygu/Workspace/Programming/gosh-rs/gosh"}
+#gosh = {git = "https://github.com/gosh-rs/gosh.git", tag="v0.0.21"}
 #spdkit = { git = "https://github.com/spdkit/spdkit.git" }
 spdkit = { path = "../spdkit" }
 structopt = "0.2"
-serde = "*"
-toml = "*"
+serde = {version="1.0", features = ["derive"]}
+serde_json = "1.0"
+toml = "0.5"
+lazy_static = "1.3"
 # cargo.toml:1 ends here
