--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@
 # [[file:~/Workspace/Programming/structure-predication/kickstart/kickstart.note::*cargo.toml][cargo.toml:1]]
 [package]
 name = "kickstart"
-version = "0.0.9"
+version = "0.0.10"
 edition = "2018"
 authors = ["Wenping Guo <ybyygu@gmail.com>"]
 
@@ -13,6 +13,7 @@ quicli = "0.4"
 gosh = {path = "/home/ybyygu/Workspace/Programming/gosh-rs/gosh"}
 #gosh = {git = "https://github.com/gosh-rs/gosh.git", tag="v0.0.21"}
 spdkit = { path = "../spdkit" }
+educate = { path = "../structure-education" }
 #spdkit = { git = "https://github.com/spdkit/spdkit.git" }
 structopt = "0.2"
 serde = {version="1.0", features = ["derive"]}
