--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ gosh = {path = "/home/ybyygu/Workspace/Programming/gosh-rs/gosh"}
 #gosh = {git = "https://github.com/gosh-rs/gosh.git", tag="v0.0.22"}
 gosh-db = {version = "*", path = "../../gosh-rs/database"}
 crossbeam-channel = "0.3"
+signal-hook = "0.1"
 spdkit = { path = "../spdkit" }
 #spdkit = { git = "https://github.com/spdkit/spdkit.git" }
 indexmap = "1"
