--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,34 +1,32 @@
-# cargo.toml
+# Cargo
 
-# [[file:~/Workspace/Programming/structure-predication/kickstart/kickstart.note::*cargo.toml][cargo.toml:1]]
+# [[file:~/Workspace/Programming/structure-predication/kickstart/kickstart.note::*Cargo][Cargo:1]]
 [package]
 name = "kickstart"
-version = "0.0.20"
+version = "0.0.21"
 edition = "2018"
 authors = ["Wenping Guo <ybyygu@gmail.com>"]
 
 [dependencies]
+serde = {version="1.0", features = ["derive"]}
+serde_json = "1.0"
+indexmap = "1"
+lazy_static = "1.3"
 rand = "0.7"
-quicli = "0.4"
-gosh = {path = "/home/ybyygu/Workspace/Programming/gosh-rs/gosh"}
-#gosh = {git = "https://github.com/gosh-rs/gosh.git", tag="v0.0.22"}
-gosh-db = {version = "*", package="gosh-database"}
-crossbeam-channel = "0.3"
-signal-hook = "0.1"
-#ctrlc = "3"
-spdkit = { path = "../spdkit" }
 warp = "0.1"
 pager = "0.15"
 tokio = "0.1"
 tokio-signal = "0.2"
 tokio-process = "0.2"
-#spdkit = { git = "https://github.com/spdkit/spdkit.git" }
 linefeed = "0.6"
-indexmap = "1"
-educate = { path = "../structure-education" }
-structopt = "0.2"
-serde = {version="1.0", features = ["derive"]}
-serde_json = "1.0"
+structopt = "0.3"
 toml = "0.5"
-lazy_static = "1.3"
-# cargo.toml:1 ends here
+crossbeam-channel = "0.3"
+#ctrlc = "3"
+signal-hook = "0.1"
+gut = {version="0.1.2", package="gchemol-gut"}
+gosh = {version = "0.0.25", features=["adhoc"]}
+gchemol_old = {git = "https://github.com/ybyygu/gchemol.git", branch="dev", package="gchemol"}
+spdkit = { version="0.0.18" }
+educate = { path = "../structure-education" }
+# Cargo:1 ends here
