--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,8 @@
-# Cargo
-
-# [[file:~/Workspace/Programming/structure-predication/kickstart/kickstart.note::*Cargo][Cargo:1]]
+# [[file:kickstart.note::7f0782c0][7f0782c0]]
 [package]
 name = "kickstart"
-version = "0.0.21"
-edition = "2018"
+version = "0.0.22"
+edition = "2021"
 authors = ["Wenping Guo <ybyygu@gmail.com>"]
 
 [dependencies]
@@ -13,20 +11,16 @@ serde_json = "1.0"
 indexmap = "1"
 lazy_static = "1.3"
 rand = "0.7"
-warp = "0.1"
-pager = "0.15"
-tokio = "0.1"
-tokio-signal = "0.2"
-tokio-process = "0.2"
+pager = "0.16"
 linefeed = "0.6"
-structopt = "0.3"
+clap = {version="3", features = ["derive"]}
 toml = "0.5"
-crossbeam-channel = "0.3"
 signal-hook = "0.1"
+crossbeam-channel = "0.3"
 #ctrlc = "3"
 #-------------------------------------------------
-gut = { version="0.1.2", package="gchemol-gut" }
-gosh = { version = "0.0.25", features=["adhoc"] }
+gut = { version="0.2", package="gchemol-gut" }
+gosh = { version=">=0.0.29", features=["adhoc"] }
 spdkit = { version="0.0.18" }
 educate = { path = "../structure-education" }
-# Cargo:1 ends here
+# 7f0782c0 ends here
