--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,11 @@ gut = { version="0.2", package="gchemol-gut" }
 gosh = { version=">=0.0.29", features=["adhoc"] }
 spdkit = { version="0.0.18" }
 educate = { version = "0.1", path = "../structure-education", features=["adhoc"] }
+surface = { version = "0.0.30", path = "../surface-explorer", features=["adhoc"] }
+
+[dev-dependencies]
+
+[features]
+# for easy hacking
+adhoc = []
 # 7f0782c0 ends here
