--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 **/data/
 /ltxpng/
 **/.ltximg/
+/ltximg/
+
+# local release staging (upload as GitHub Release assets, do not track)
+/releases/
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here http://doc.crates.io/guide.html#cargotoml-vs-cargolock
